# projetcpp2526-s2-2a12-smart-oil-press

./: .gitignore  ARDUINO_SETUP_GUIDE.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Ccommande.cpp  Ccommande.h  EmailSender.h  IMPLEMENTATION_COMPLETE.md  Makefile  Makefile.Debug  Makefile.Release  README.md  SQL_FIX_README.md  STRUCTURE.md  arduino_environment.cpp  ayoub_project.pro  ayoubproject.pro  build.bat  build.ps1  client.cpp  client.h  commande.cpp  commande.h  commande_widget.cpp  commande_widget.h  commande_widget.ui  connection.cpp  connection.h  connexion.cpp  connexion.h  email_sender.cpp  email_sender.h  employe.cpp  employe.h  employe_widget.cpp  employe_widget.h  employe_widget.ui  equipe.cpp  equipe.h  (+44 more)
OneDrive/Desktop/projetcpp2526-s2-2a12-smart-oil-press-integration-crud-salmene/: ARDUINO_COMMAND_THRESHOLD_SETUP.md  ARDUINO_SEARCH_INTEGRATION_EXAMPLE.md  CMakeCache.txt.prev  CMakeLists.txt  COMMANDE_SEUL_INTEGRATION.md  VENTILATEUR_CONTROL_USAGE.md  build.ninja  build_log.txt  build_output.txt  cmake_install.cmake  commande.cpp  employe.cpp  machine.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  oauth2_helper.h  service_account.json  tunisia_map_widget.cpp
client4/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
eq/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
equipe/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.qrc
equipe_widget/: CMakeLists.txt  equipe_widget.cpp  equipe_widget.h  equipe_widget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  team_repository.cpp  team_repository.h  the mains .txt
equipe_widget/styles/: style.qss
equipe_widget/tools/: parse_ui.py
here/: CMakeLists.txt  client.cpp  commande.cpp  connection.cpp  connection.h  machine.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
projetcpp2526-s2-2a12-smart-oil-press-integration-crud-salmene/: Arduino.cpp  Arduino.h  CMakeLists.txt  arduino_environment.h  commande.cpp  commande.h  commande_widget.cpp  connection.cpp  email_sender.cpp  equipe_widget.h  labo.cpp  machine.cpp  machine.h  machine_widget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  oauth2_helper.cpp  parking_widget.cpp  parking_widget.h  service_account.json  tunisia_map_data.h  tunisia_map_widget.cpp  tunisia_map_widget.h  tunisian_regions.h
projetcpp2526-s2-2a12-smart-oil-press-integration-crud-salmene 3/projetcpp2526-s2-2a12-smart-oil-press-integration-crud-salmene/: CMakeLists.txt  client.h  commande_widget.cpp  commande_widget.h  employe.h  equipe_widget.cpp  equipe_widget.h  labo.cpp  labo.h  machine_widget.cpp  machine_widget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  widget_client.cpp
projetcpp2526-s2-2a12-smart-oil-press-integration-crud-salmene/logs/: machine_122.txt  machine_12286.txt  machine_999.txt
projetcpp2526-s2-2a12-smart-oil-press-integration-crud-salmene/utils/qrcode/: qrcodegen.cpp  qrcodegen.hpp
projetcpp2526-s2-2a12-smart-oil-press-zed/: client.cpp  client.h  commande.h  employe.cpp  equipe.cpp  labo.h  machine.cpp  machine.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
release/: moc_mainwindow.cpp  qrc_resources.cpp
style/: styles.qss  stylesheet.qss
styles/: styles.qss
tmp/: mainwindow.corrected.ui  mainwindow.fixed.ui
